--- a/oldprojects/entireBlog/src/App.css
+++ b/oldprojects/entireBlog/src/App.css
@@ -327,15 +327,7 @@ ul {
 button:hover {
     background-color: #0056b3;
 }
-.error-border {
-    border-color: red;
-}
 
-.error-message {
-    color: red;
-    font-size: 12px;
-    margin-top: 5px;
-}
 h3 {
     margin-bottom: 10px;
     font-size: 18px;
@@ -354,7 +346,7 @@ p {
     text-align: center;
     font-size: 16px;
     gap: 10px;
-    width: 300px;
+    width: 90%;
     height: auto;
 }
 
